--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -69,17 +69,19 @@
   font-size: 1.1rem;
   font-weight: 300;
   letter-spacing: 1px;
-  line-height: 1.5; /* Ensures readability */
-  max-width: 40rem; /* Limits the width of the paragraph */
+  line-height: 1.5;
+  max-width: 40rem;
 
 }
 
 .btn {
-    background: white;
-    margin: 1rem 0;
-    padding: 0.75rem 1.5rem;
-    border: none;
-    border-radius: 2rem;
+  background: white;
+  margin: 1rem 0;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 2rem;
+  color: black;
+  font-size: 0.8rem;
 }
 
 .btnImg {
@@ -90,15 +92,35 @@
 
 @media screen and (max-width: 768px) {
   .introPara {
-    font-size: 0.98rem; /* Adjusts the font size for smaller screens */
-    max-width: 40rem; /* Reduces the max width to fit smaller screens */
+    font-size: 0.98rem;
+    max-width: 40rem;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .introPara {
-    font-size: 0.9rem; /* Even smaller font size for very small screens */
-    max-width: 30rem; /* Further reduces width */
-    text-align: center; /* Centers text for very small screens */
+    .introPara {
+      font-size: 1rem;
+      max-width: 30rem;
+      text-align: left;
+      font-weight: 600;
+    }
+  
+    .introText {
+      font-size: 2rem;
+      font-weight: 700;
+    }
+  
+    .bg {
+      right: -2rem;
+    }
+  
+    .introRole {
+      font-size: 2rem;
+      font-weight: 600;
+    }
+  
+    .introContent {
+      padding-left: 1rem;
+    }
   }
-}
+  
