--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,9 +1,7 @@
 .navbar {
     background: rgb(30,30,30);
     height: 5rem;
-    width: 100vw;
-    max-width: 75rem;
-    margin: 0 auto;
+    width: 100%;
     padding: 1rem 2rem;
     display: flex;
     align-items: center;
@@ -11,14 +9,16 @@
     position: sticky;
     top: 0;
     z-index: 3;
+    box-sizing: border-box;
 }
+
 
 .logo {
     object-fit: cover;
     height: 3rem;
     width: 4rem;
-    margin-right: 5.7rem;
-    margin-left: -3rem;
+    margin-right: auto;
+    margin-left: 0;
 }
 
 .desktopMenuListItem {
@@ -41,7 +41,8 @@
     justify-content: center;
     padding: 0 1rem;
     border-radius: 2rem;
-    margin-right: -2rem;
+    margin-left: auto;
+    white-space: nowrap;
 }
 
 .desktopMenuImg {
@@ -86,6 +87,7 @@
 @media screen and (max-width: 720px) {
     .mobMenu{
         display: flex;
+        margin-left: 10px;
     }
     .desktopMenu {
         display: none;
